pkg: set type: module

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "repository": "filecion-station/nodejs",
+  "type": "module",
   "scripts": {
     "test": "standard"
   },
