--- a/package.json
+++ b/package.json
@@ -3,11 +3,5 @@
   "version": "0.0.0",
   "license": "MIT",
   "repository": "filecion-station/nodejs",
-  "type": "module",
-  "scripts": {
-    "test": "standard"
-  },
-  "devDependencies": {
-    "standard": "^17.0.0"
-  }
+  "type": "module"
 }
