--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "filecoin-station-nodejs",
+  "name": "module-boilerplate-nodejs",
+  "private": true,
   "version": "0.0.0",
   "license": "MIT",
-  "repository": "filecion-station/nodejs",
+  "repository": "filecion-station/module-boilerplate-nodejs",
   "type": "module"
 }
